--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-
-/* ========= RESET ========= */
 *{
   margin:0;
   padding:0;
@@ -17,7 +15,6 @@
   font-family:"Inter",sans-serif;
 }
 
-/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
@@ -25,7 +22,7 @@ body{
   scroll-snap-type:y mandatory;
 }
 
-/* ========= NAV ========= */
+/* NAV */
 nav{
   position:fixed;
   top:0;
@@ -50,13 +47,13 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= SECTIONS ========= */
+/* SECTIONS */
 .section{
   min-height:100vh;
   scroll-snap-align:start;
   display:flex;
   justify-content:flex-start;
-  padding:180px 10vw 160px 22vw;
+  padding:180px 10vw 160px 20vw; /* 🔧 ANTES 22vw */
 }
 
 .section-block{
@@ -65,14 +62,14 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= TITLES ========= */
+/* TITLES */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
   line-height:1.05;
 }
 
-/* ========= HERO ========= */
+/* HERO */
 .section.hero{
   align-items:center;
 }
@@ -88,7 +85,7 @@ h1{
   color:#777;
 }
 
-/* ========= TEXT ========= */
+/* TEXT */
 .section-block p{
   margin-top:12px;
   font-size:15px;
@@ -98,7 +95,7 @@ h1{
   text-align:justify;
 }
 
-/* ========= ABOUT ========= */
+/* ABOUT */
 .about{
   display:flex;
   gap:48px;
@@ -112,7 +109,7 @@ h1{
   opacity:.9;
 }
 
-/* ========= PORTFOLIO ========= */
+/* PORTFOLIO */
 .portfolio-wrapper{
   position:relative;
   margin-top:56px;
@@ -136,146 +133,22 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:28px;
-  scrollbar-width:auto;
-  scrollbar-color:#aaa transparent;
-}
-
-.portfolio-carousel::-webkit-scrollbar{height:10px}
-.portfolio-carousel::-webkit-scrollbar-track{
-  background:rgba(255,255,255,.08);
-  border-radius:10px;
-}
-.portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#aaa;
-  border-radius:10px;
-}
-.portfolio-carousel::-webkit-scrollbar-thumb:hover{
-  background:#fff;
 }
 
 .project-card{
   min-width:540px;
-  text-decoration:none;
-  color:inherit;
-  opacity:0;
-  transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
 }
 
-.project-card.is-visible{
-  opacity:1;
-  transform:none;
-}
-
-.project-image{
-  height:310px;
-  margin-bottom:20px;
-  overflow:hidden;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-}
-
-/* ========= CV ========= */
+/* CV */
 .timeline{
-  position:relative;
   margin-top:60px;
   padding-left:60px;
 }
 
-.timeline-line{
-  position:absolute;
-  left:20px;
-  top:0;
-  width:1px;
-  height:0;
-  background:linear-gradient(#fff,#777);
-}
-
-.timeline-item{
-  position:relative;
-  margin-bottom:80px;
-  max-width:460px;
-  opacity:0;
-  transform:translateY(20px);
-  transition:.8s ease;
-}
-
-.timeline-item.is-visible{
-  opacity:1;
-  transform:none;
-}
-
-.timeline-item::before{
-  content:"";
-  position:absolute;
-  left:-44px;
-  top:50%;
-  transform:translateY(-50%);
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:#fff;
-}
-
-.timeline-card{
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  border-radius:20px;
-  padding:28px;
-}
-
-.timeline-card h3{
-  font-size:18px;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-  margin-bottom:16px;
-}
-
-.timeline-card strong{
-  display:block;
-  font-size:16px;
-}
-
-.timeline-card span{
-  font-size:13px;
-  color:#888;
-}
-
-/* ========= CONTACT ========= */
+/* CONTACT */
 .contact{
   margin-top:48px;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:24px;
 }
-
-.contact a{
-  padding:28px;
-  border-radius:20px;
-  background:rgba(255,255,255,.04);
-  border:1px solid rgba(255,255,255,.08);
-  color:#fff;
-  text-decoration:none;
-  transition:.35s ease;
-}
-
-.contact a span{
-  display:block;
-  margin-top:8px;
-  font-size:12px;
-  letter-spacing:.18em;
-  text-transform:uppercase;
-  color:#888;
-}
-
-.contact a:hover{
-  transform:translateY(-4px);
-}
-
 </style>
 </head>
 
@@ -296,169 +169,6 @@ h1{
     <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
-
-<!-- SOBRE MI -->
-<section class="section">
-  <div class="section-block">
-    <h1>Sobre mí</h1>
-    <div class="about">
-      <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de estudio hasta la materialización final.
-      </p>
-      <img src="foto.jpg" alt="">
-    </div>
-  </div>
-</section>
-
-<!-- PORTFOLIO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel" id="portfolioCarousel">
-
-        <a class="project-card">
-          <div class="project-image"><img src="1.jpg"></div>
-          <strong>NODE</strong>
-        </a>
-
-        <a class="project-card">
-          <div class="project-image"><img src="2.jpg"></div>
-          <strong>Sixay</strong>
-        </a>
-
-        <a class="project-card">
-          <div class="project-image"><img src="3.jpg"></div>
-          <strong>Exploración material</strong>
-        </a>
-
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CV -->
-<section class="section">
-  <div class="section-block">
-    <h1>CV</h1>
-
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Universitat Jaume I</strong>
-          <span>Ingeniería en Diseño Industrial</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <strong>Universitat Politècnica de València</strong>
-          <span>Ingeniería en Diseño Industrial</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <strong>Erasmus</strong>
-          <span>Londres</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Experiencia</h3>
-          <strong>Sin experiencia profesional</strong>
-          <span>Perfil junior · Primer empleo / prácticas</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Idiomas</h3>
-          <strong>Español · Inglés · Húngaro</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Software</h3>
-          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
-          <span>Fusion 360 · Sinutrain · 3ds Max</span>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- CONTACTO -->
-<section class="section">
-  <div class="section-block">
-    <h1>Contacto</h1>
-    <div class="contact">
-      <a href="tel:+34600000000">+34 600 000 000<span>Teléfono</span></a>
-      <a href="mailto:luis@example.com">luis@example.com<span>Email</span></a>
-      <a href="#">LinkedIn<span>Perfil profesional</span></a>
-    </div>
-  </div>
-</section>
-
-<script>
-/* NAV */
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
-});
-
-/* OBSERVER */
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.2});
-
-document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
-
-/* TIMELINE LINE */
-const line=document.getElementById("timelineLine");
-const timeline=document.querySelector(".timeline");
-
-window.addEventListener("scroll",()=>{
-  if(!timeline) return;
-  const r=timeline.getBoundingClientRect();
-  const h=Math.min(window.innerHeight-r.top,r.height);
-  line.style.height=Math.max(0,h)+"px";
-});
-
-/* SCROLL HORIZONTAL SUAVE + CLAMP */
-const carousel=document.getElementById("portfolioCarousel");
-let current=0, target=0;
-const ease=0.08;
-
-carousel.addEventListener("wheel",e=>{
-  e.preventDefault();
-  const max=carousel.scrollWidth-carousel.clientWidth;
-  target+=e.deltaY*1.2;
-  target=Math.max(0,Math.min(target,max));
-},{passive:false});
-
-function animate(){
-  current+=(target-current)*ease;
-  carousel.scrollLeft=current;
-  requestAnimationFrame(animate);
-}
-animate();
-</script>
 
 </body>
 </html>
