--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ h1{
   height:480px;
   object-fit:cover;
   opacity:.9;
-  margin-top:16px; /* ↓ ajuste aplicado */
+  margin-top:16px;
 }
 
 /* ========= PORTFOLIO ========= */
@@ -161,7 +161,7 @@ h1{
   color:inherit;
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:.8s ease;
 }
 
 .project-card.is-visible{
@@ -282,6 +282,185 @@ h1{
 </head>
 
 <body>
-<!-- resto del HTML y JS permanece exactamente igual -->
+
+<nav>
+  <span data-i="0">Inicio</span>
+  <span data-i="1">Sobre mí</span>
+  <span data-i="2">Portfolio</span>
+  <span data-i="3">CV</span>
+  <span data-i="4">Contacto</span>
+</nav>
+
+<!-- HERO -->
+<section class="section hero">
+  <div class="section-block">
+    <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
+    <div class="hero-sub">Portfolio | Diseño industrial</div>
+  </div>
+</section>
+
+<!-- SOBRE MI -->
+<section class="section">
+  <div class="section-block">
+    <h1>Sobre mí</h1>
+    <div class="about">
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
+        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
+        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
+        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
+        desde la fase de estudio hasta la materialización final.
+      </p>
+      <img src="foto.jpg" alt="Luis Blasco">
+    </div>
+  </div>
+</section>
+
+<!-- PORTFOLIO -->
+<section class="section">
+  <div class="section-block">
+    <h1>Portfolio</h1>
+    <div class="portfolio-wrapper">
+      <div class="portfolio-carousel" id="portfolioCarousel">
+
+        <a class="project-card">
+          <div class="project-image"><img src="1.jpg"></div>
+          <strong>NODE</strong>
+        </a>
+
+        <a class="project-card">
+          <div class="project-image"><img src="2.jpg"></div>
+          <strong>Sixay</strong>
+        </a>
+
+        <a class="project-card">
+          <div class="project-image"><img src="3.jpg"></div>
+          <strong>Exploración material</strong>
+        </a>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- CV -->
+<section class="section">
+  <div class="section-block">
+    <h1>CV</h1>
+
+    <div class="timeline">
+      <div class="timeline-line" id="timelineLine"></div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Universitat Jaume I</strong>
+          <span>Ingeniería en Diseño Industrial</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <strong>Universitat Politècnica de València</strong>
+          <span>Ingeniería en Diseño Industrial</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <strong>Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Experiencia</h3>
+          <strong>Sin experiencia profesional</strong>
+          <span>Perfil junior · Primer empleo / prácticas</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Idiomas</h3>
+          <strong>Español · Inglés · Húngaro</strong>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Software</h3>
+          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
+          <span>Fusion 360 · Sinutrain · 3ds Max</span>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- CONTACTO -->
+<section class="section">
+  <div class="section-block">
+    <h1>Contacto</h1>
+    <div class="contact">
+      <a href="tel:+34600000000">+34 600 000 000<span>Teléfono</span></a>
+      <a href="mailto:luis@example.com">luis@example.com<span>Email</span></a>
+      <a href="#">LinkedIn<span>Perfil profesional</span></a>
+    </div>
+  </div>
+</section>
+
+<script>
+/* NAV */
+document.querySelectorAll("nav span").forEach((b,i)=>{
+  b.onclick=()=>document.querySelectorAll(".section")[i]
+    .scrollIntoView({behavior:"smooth"});
+});
+
+/* OBSERVER */
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
+},{threshold:.2});
+
+document.querySelectorAll(".project-card,.timeline-item")
+  .forEach(el=>observer.observe(el));
+
+/* TIMELINE LINE */
+const line=document.getElementById("timelineLine");
+const timeline=document.querySelector(".timeline");
+
+window.addEventListener("scroll",()=>{
+  if(!timeline) return;
+  const r=timeline.getBoundingClientRect();
+  const h=Math.min(window.innerHeight-r.top,r.height);
+  line.style.height=Math.max(0,h)+"px";
+});
+
+/* SCROLL HORIZONTAL SUAVE + CLAMP */
+const carousel=document.getElementById("portfolioCarousel");
+let current=0, target=0;
+const ease=0.08;
+
+carousel.addEventListener("wheel",e=>{
+  e.preventDefault();
+  const max=carousel.scrollWidth-carousel.clientWidth;
+  target+=e.deltaY*1.2;
+  target=Math.max(0,Math.min(target,max));
+},{passive:false});
+
+function animate(){
+  current+=(target-current)*ease;
+  carousel.scrollLeft=current;
+  requestAnimationFrame(animate);
+}
+animate();
+</script>
+
 </body>
 </html>
