--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ h1{
   margin-top:12px;
   font-size:15px;
   color:#aaa;
-  max-width:565px;
+  max-width:600px;
   line-height:1.6;
   text-align:justify;
 }
@@ -312,8 +312,8 @@ h1{
         ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
         continuado en la Universitat Politècnica de València y completado con un programa Erasmus
         en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de estudio hasta la materialización final.
+        una base técnica sólida y una forma de pensar práctica. Disfruto del proceso de diseño
+        desde el periodo del desarrollo hasta la materialización terminal.
       </p>
       <img src="foto.jpg" alt="Luis Blasco">
     </div>
